gp2/src/c11.output
Nonterminals useless in grammar

    designation
    designator_list
    designator


Terminals unused in grammar

    INT_CONST
    FLOAT_CONST
    DOUBLE_CONST


Rules useless in grammar

  278 designation: designator_list '='

  279 designator_list: designator
  280                | designator_list designator

  281 designator: '[' constant_expression ']'
  282           | '.' IDENTIFIER


State 21 conflicts: 1 shift/reduce
State 64 conflicts: 36 reduce/reduce
State 356 conflicts: 1 shift/reduce
State 388 conflicts: 1 shift/reduce
State 396 conflicts: 20 shift/reduce, 2 reduce/reduce
State 397 conflicts: 2 reduce/reduce
State 437 conflicts: 8 shift/reduce
State 439 conflicts: 8 shift/reduce
State 440 conflicts: 8 shift/reduce
State 463 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | generic_selection

    6 constant: I_CONSTANT
    7         | F_CONSTANT
    8         | ENUMERATION_CONSTANT

    9 enumeration_constant: IDENTIFIER

   10 string: STRING_LITERAL
   11       | FUNC_NAME

   12 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   13 generic_assoc_list: generic_association
   14                   | generic_assoc_list ',' generic_association

   15 generic_association: type_name ':' assignment_expression
   16                    | DEFAULT ':' assignment_expression

   17 postfix_expression: primary_expression
   18                   | postfix_expression '[' expression ']'
   19                   | postfix_expression '(' ')'
   20                   | postfix_expression '(' argument_expression_list ')'
   21                   | postfix_expression '.' IDENTIFIER
   22                   | postfix_expression PTR_OP IDENTIFIER
   23                   | postfix_expression INC_OP
   24                   | postfix_expression DEC_OP
   25                   | '(' type_name ')' '{' initializer_list '}'
   26                   | '(' type_name ')' '{' initializer_list ',' '}'

   27 argument_expression_list: assignment_expression
   28                         | argument_expression_list ',' assignment_expression

   29 unary_expression: postfix_expression
   30                 | INC_OP unary_expression
   31                 | DEC_OP unary_expression
   32                 | unary_operator cast_expression
   33                 | SIZEOF unary_expression
   34                 | SIZEOF '(' type_name ')'
   35                 | ALIGNOF '(' type_name ')'

   36 unary_operator: '&'
   37               | '*'
   38               | '+'
   39               | '-'
   40               | '~'
   41               | '!'

   42 cast_expression: unary_expression
   43                | '(' type_name ')' cast_expression

   44 multiplicative_expression: cast_expression
   45                          | multiplicative_expression '*' cast_expression
   46                          | multiplicative_expression '/' cast_expression
   47                          | multiplicative_expression '%' cast_expression

   48 additive_expression: multiplicative_expression
   49                    | additive_expression '+' multiplicative_expression
   50                    | additive_expression '-' multiplicative_expression

   51 shift_expression: additive_expression
   52                 | shift_expression LEFT_OP additive_expression
   53                 | shift_expression RIGHT_OP additive_expression

   54 relational_expression: shift_expression
   55                      | relational_expression '<' shift_expression
   56                      | relational_expression '>' shift_expression
   57                      | relational_expression LE_OP shift_expression
   58                      | relational_expression GE_OP shift_expression

   59 equality_expression: relational_expression
   60                    | equality_expression EQ_OP relational_expression
   61                    | equality_expression NE_OP relational_expression

   62 and_expression: equality_expression
   63               | and_expression '&' equality_expression

   64 exclusive_or_expression: and_expression
   65                        | exclusive_or_expression '^' and_expression

   66 inclusive_or_expression: exclusive_or_expression
   67                        | inclusive_or_expression '|' exclusive_or_expression

   68 logical_and_expression: inclusive_or_expression
   69                       | logical_and_expression AND_OP inclusive_or_expression

   70 logical_or_expression: logical_and_expression
   71                      | logical_or_expression OR_OP logical_and_expression

   72 conditional_expression: logical_or_expression
   73                       | logical_or_expression '?' expression ':' conditional_expression

   74 assignment_expression: conditional_expression
   75                      | unary_expression assignment_operator assignment_expression

   76 assignment_operator: '='
   77                    | MUL_ASSIGN
   78                    | DIV_ASSIGN
   79                    | MOD_ASSIGN
   80                    | ADD_ASSIGN
   81                    | SUB_ASSIGN
   82                    | LEFT_ASSIGN
   83                    | RIGHT_ASSIGN
   84                    | AND_ASSIGN
   85                    | XOR_ASSIGN
   86                    | OR_ASSIGN

   87 expression: assignment_expression
   88           | expression ',' assignment_expression

   89 constant_expression: conditional_expression

   90 declaration: declaration_specifiers ';'
   91            | declaration_specifiers init_declarator_list ';'
   92            | static_assert_declaration

   93 declaration_specifiers: storage_class_specifier declaration_specifiers
   94                       | storage_class_specifier
   95                       | type_specifier_list declaration_specifiers
   96                       | type_specifier_list
   97                       | type_qualifier declaration_specifiers
   98                       | type_qualifier
   99                       | function_specifier declaration_specifiers
  100                       | function_specifier
  101                       | alignment_specifier declaration_specifiers
  102                       | alignment_specifier

  103 init_declarator_list: init_declarator
  104                     | init_declarator_list ',' init_declarator

  105 init_declarator: declarator '=' initializer
  106                | declarator

  107 storage_class_specifier: TYPEDEF
  108                        | EXTERN
  109                        | STATIC
  110                        | THREAD_LOCAL
  111                        | AUTO
  112                        | REGISTER

  113 type_specifier_list: type_specifier_list type_specifier
  114                    | type_specifier

  115 type_specifier: VOID
  116               | CHAR
  117               | SHORT
  118               | INT
  119               | LONG
  120               | FLOAT
  121               | DOUBLE
  122               | SIGNED
  123               | UNSIGNED
  124               | BOOL
  125               | COMPLEX
  126               | IMAGINARY
  127               | atomic_type_specifier
  128               | struct_or_union_specifier
  129               | enum_specifier
  130               | TYPEDEF_NAME

  131 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  132                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  133                          | struct_or_union IDENTIFIER

  134 struct_or_union: STRUCT
  135                | UNION

  136 struct_declaration_list: struct_declaration
  137                        | struct_declaration_list struct_declaration

  138 struct_declaration: specifier_qualifier_list ';'
  139                   | specifier_qualifier_list struct_declarator_list ';'
  140                   | static_assert_declaration

  141 specifier_qualifier_list: type_specifier specifier_qualifier_list
  142                         | type_specifier
  143                         | type_qualifier specifier_qualifier_list
  144                         | type_qualifier

  145 struct_declarator_list: struct_declarator
  146                       | struct_declarator_list ',' struct_declarator

  147 struct_declarator: ':' constant_expression
  148                  | declarator ':' constant_expression
  149                  | declarator

  150 enum_specifier: ENUM '{' enumerator_list '}'
  151               | ENUM '{' enumerator_list ',' '}'
  152               | ENUM IDENTIFIER '{' enumerator_list '}'
  153               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  154               | ENUM IDENTIFIER

  155 enumerator_list: enumerator
  156                | enumerator_list ',' enumerator

  157 enumerator: enumeration_constant '=' constant_expression
  158           | enumeration_constant

  159 atomic_type_specifier: ATOMIC '(' type_name ')'

  160 type_qualifier: CONST
  161               | RESTRICT
  162               | VOLATILE
  163               | ATOMIC

  164 function_specifier: INLINE
  165                   | NORETURN

  166 alignment_specifier: ALIGNAS '(' type_name ')'
  167                    | ALIGNAS '(' constant_expression ')'

  168 declarator: pointer direct_declarator
  169           | direct_declarator

  170 direct_declarator: IDENTIFIER
  171                  | '(' declarator ')'
  172                  | direct_declarator '[' ']'
  173                  | direct_declarator '[' '*' ']'
  174                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  175                  | direct_declarator '[' STATIC assignment_expression ']'
  176                  | direct_declarator '[' type_qualifier_list '*' ']'
  177                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  178                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  179                  | direct_declarator '[' type_qualifier_list ']'
  180                  | direct_declarator '[' assignment_expression ']'
  181                  | direct_declarator '(' parameter_type_list ')'
  182                  | direct_declarator '(' ')'
  183                  | direct_declarator '(' identifier_list ')'

  184 pointer: '*' type_qualifier_list pointer
  185        | '*' type_qualifier_list
  186        | '*' pointer
  187        | '*'

  188 type_qualifier_list: type_qualifier
  189                    | type_qualifier_list type_qualifier

  190 parameter_type_list: parameter_list ',' ELLIPSIS
  191                    | parameter_list

  192 parameter_list: parameter_declaration
  193               | parameter_list ',' parameter_declaration

  194 parameter_declaration: declaration_specifiers declarator
  195                      | declaration_specifiers abstract_declarator
  196                      | declaration_specifiers

  197 identifier_list: IDENTIFIER
  198                | identifier_list ',' IDENTIFIER

  199 type_name: specifier_qualifier_list abstract_declarator
  200          | specifier_qualifier_list

  201 abstract_declarator: pointer direct_abstract_declarator
  202                    | pointer
  203                    | direct_abstract_declarator

  204 direct_abstract_declarator: '(' abstract_declarator ')'
  205                           | '[' ']'
  206                           | '[' '*' ']'
  207                           | '[' STATIC type_qualifier_list assignment_expression ']'
  208                           | '[' STATIC assignment_expression ']'
  209                           | '[' type_qualifier_list STATIC assignment_expression ']'
  210                           | '[' type_qualifier_list assignment_expression ']'
  211                           | '[' type_qualifier_list ']'
  212                           | '[' assignment_expression ']'
  213                           | direct_abstract_declarator '[' ']'
  214                           | direct_abstract_declarator '[' '*' ']'
  215                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  216                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  217                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  218                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  219                           | direct_abstract_declarator '[' type_qualifier_list ']'
  220                           | direct_abstract_declarator '[' assignment_expression ']'
  221                           | '(' ')'
  222                           | '(' parameter_type_list ')'
  223                           | direct_abstract_declarator '(' ')'
  224                           | direct_abstract_declarator '(' parameter_type_list ')'

  225 initializer: '{' initializer_list '}'
  226            | '{' initializer_list ',' '}'
  227            | assignment_expression

  228 initializer_list: initializer

  229 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  230 statement: labeled_statement
  231          | compound_statement
  232          | expression_statement
  233          | selection_statement
  234          | iteration_statement
  235          | jump_statement

  236 labeled_statement: IDENTIFIER ':' statement
  237                  | CASE constant_expression ':' statement
  238                  | DEFAULT ':' statement

  239 compound_statement: '{' '}'
  240                   | '{' block_item_list '}'

  241 block_item_list: block_item
  242                | block_item_list block_item

  243 block_item: declaration
  244           | statement

  245 expression_statement: ';'
  246                     | expression ';'

  247 selection_statement: IF '(' expression ')' statement ELSE statement
  248                    | IF '(' expression ')' statement
  249                    | IF expression compound_statement ELSE compound_statement
  250                    | IF expression compound_statement
  251                    | SWITCH '(' expression ')' statement
  252                    | SWITCH expression compound_statement

  253 iteration_statement: WHILE '(' expression ')' statement
  254                    | WHILE expression compound_statement
  255                    | DO statement WHILE '(' expression ')' ';'
  256                    | FOR expression_statement expression_statement compound_statement
  257                    | FOR expression_statement expression_statement expression_statement compound_statement
  258                    | FOR declaration expression_statement expression compound_statement
  259                    | FOR declaration expression_statement compound_statement
  260                    | FOR '(' expression_statement expression_statement ')' statement
  261                    | FOR '(' expression_statement expression_statement expression ')' statement
  262                    | FOR '(' declaration expression_statement ')' statement
  263                    | FOR '(' declaration expression_statement expression ')' statement

  264 jump_statement: GOTO IDENTIFIER ';'
  265               | CONTINUE ';'
  266               | BREAK ';'
  267               | RETURN ';'
  268               | RETURN expression ';'

  269 program: translation_unit

  270 translation_unit: external_declaration
  271                 | translation_unit external_declaration

  272 external_declaration: function_definition
  273                     | declaration

  274 function_definition: declaration_specifiers declarator declaration_list compound_statement
  275                    | declaration_specifiers declarator compound_statement

  276 declaration_list: declaration
  277                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 41
    '%' (37) 47
    '&' (38) 36 63
    '(' (40) 4 12 19 20 25 26 34 35 43 159 166 167 171 181 182 183 204 221 222 223 224 229 247 248 251 253 255 260 261 262 263
    ')' (41) 4 12 19 20 25 26 34 35 43 159 166 167 171 181 182 183 204 221 222 223 224 229 247 248 251 253 255 260 261 262 263
    '*' (42) 37 45 173 176 184 185 186 187 206 214
    '+' (43) 38 49
    ',' (44) 12 14 26 28 88 104 146 151 153 156 190 193 198 226 229
    '-' (45) 39 50
    '.' (46) 21
    '/' (47) 46
    ':' (58) 15 16 73 147 148 236 237 238
    ';' (59) 90 91 138 139 229 245 246 255 264 265 266 267 268
    '<' (60) 55
    '=' (61) 76 105 157
    '>' (62) 56
    '?' (63) 73
    '[' (91) 18 172 173 174 175 176 177 178 179 180 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220
    ']' (93) 18 172 173 174 175 176 177 178 179 180 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220
    '^' (94) 65
    '{' (123) 25 26 131 132 150 151 152 153 225 226 239 240
    '|' (124) 67
    '}' (125) 25 26 131 132 150 151 152 153 225 226 239 240
    '~' (126) 40
    error (256)
    SIZEOF (258) 33 34
    PTR_OP (259) 22
    INC_OP (260) 23 30
    DEC_OP (261) 24 31
    TYPEDEF_NAME (262) 130
    TYPEDEF (263) 107
    EXTERN (264) 108
    STATIC (265) 109 174 175 177 207 208 209 215 216 218
    AUTO (266) 111
    REGISTER (267) 112
    INLINE (268) 164
    CONST (269) 160
    RESTRICT (270) 161
    VOLATILE (271) 162
    CHAR (272) 116
    SHORT (273) 117
    LONG (274) 119
    SIGNED (275) 122
    UNSIGNED (276) 123
    VOID (277) 115
    COMPLEX (278) 125
    IMAGINARY (279) 126
    ENUM (280) 150 151 152 153 154
    ELLIPSIS (281) 190
    CASE (282) 237
    DEFAULT (283) 16 238
    IF (284) 247 248 249 250
    ELSE (285) 247 249
    SWITCH (286) 251 252
    WHILE (287) 253 254 255
    DO (288) 255
    FOR (289) 256 257 258 259 260 261 262 263
    GOTO (290) 264
    CONTINUE (291) 265
    BREAK (292) 266
    RETURN (293) 267 268
    ALIGNAS (294) 166 167
    ALIGNOF (295) 35
    ATOMIC (296) 159 163
    NORETURN (297) 165
    STATIC_ASSERT (298) 229
    THREAD_LOCAL (299) 110
    INT <yyt_type> (300) 118
    FLOAT <yyt_type> (301) 120
    STRUCT <yyt_type> (302) 134
    UNION <yyt_type> (303) 135
    MUL_ASSIGN <yyt_type> (304) 77
    DIV_ASSIGN <yyt_type> (305) 78
    MOD_ASSIGN <yyt_type> (306) 79
    ADD_ASSIGN <yyt_type> (307) 80
    SUB_ASSIGN <yyt_type> (308) 81
    LEFT_ASSIGN <yyt_type> (309) 82
    RIGHT_ASSIGN <yyt_type> (310) 83
    AND_ASSIGN <yyt_type> (311) 84
    XOR_ASSIGN <yyt_type> (312) 85
    OR_ASSIGN <yyt_type> (313) 86
    DOUBLE <yyt_type> (314) 121
    IDENTIFIER <id> (315) 1 9 21 22 132 133 152 153 154 170 197 198 236 264
    STRING_LITERAL <id> (316) 10 229
    ENUMERATION_CONSTANT <id> (317) 8
    FUNC_NAME <id> (318) 11
    GENERIC <id> (319) 12
    INT_CONST <intval> (320)
    I_CONSTANT <intval> (321) 6
    FLOAT_CONST <fval> (322)
    F_CONSTANT <fval> (323) 7
    DOUBLE_CONST <doubleval> (324)
    BOOL <boolval> (325) 124
    LE_OP <intval> (326) 57
    GE_OP <intval> (327) 58
    EQ_OP <intval> (328) 60
    NE_OP <intval> (329) 61
    AND_OP <intval> (330) 69
    OR_OP <intval> (331) 71
    LEFT_OP <intval> (332) 52
    RIGHT_OP <intval> (333) 53


Nonterminals, with rules where they appear

    $accept (103)
        on left: 0
    primary_expression <node> (104)
        on left: 1 2 3 4 5
        on right: 17
    constant <node> (105)
        on left: 6 7 8
        on right: 2
    enumeration_constant <node> (106)
        on left: 9
        on right: 157 158
    string <node> (107)
        on left: 10 11
        on right: 3
    generic_selection <node> (108)
        on left: 12
        on right: 5
    generic_assoc_list (109)
        on left: 13 14
        on right: 12 14
    generic_association (110)
        on left: 15 16
        on right: 13 14
    postfix_expression <node> (111)
        on left: 17 18 19 20 21 22 23 24 25 26
        on right: 18 19 20 21 22 23 24 29
    argument_expression_list <node> (112)
        on left: 27 28
        on right: 20 28
    unary_expression <node> (113)
        on left: 29 30 31 32 33 34 35
        on right: 30 31 33 42 75
    unary_operator (114)
        on left: 36 37 38 39 40 41
        on right: 32
    cast_expression <node> (115)
        on left: 42 43
        on right: 32 43 44 45 46 47
    multiplicative_expression <node> (116)
        on left: 44 45 46 47
        on right: 45 46 47 48 49 50
    additive_expression <node> (117)
        on left: 48 49 50
        on right: 49 50 51 52 53
    shift_expression <node> (118)
        on left: 51 52 53
        on right: 52 53 54 55 56 57 58
    relational_expression <node> (119)
        on left: 54 55 56 57 58
        on right: 55 56 57 58 59 60 61
    equality_expression <node> (120)
        on left: 59 60 61
        on right: 60 61 62 63
    and_expression <node> (121)
        on left: 62 63
        on right: 63 64 65
    exclusive_or_expression <node> (122)
        on left: 64 65
        on right: 65 66 67
    inclusive_or_expression <node> (123)
        on left: 66 67
        on right: 67 68 69
    logical_and_expression <node> (124)
        on left: 68 69
        on right: 69 70 71
    logical_or_expression <node> (125)
        on left: 70 71
        on right: 71 72 73
    conditional_expression <node> (126)
        on left: 72 73
        on right: 73 74 89
    assignment_expression <node> (127)
        on left: 74 75
        on right: 12 15 16 27 28 75 87 88 174 175 177 178 180 207 208 209 210 212 215 216 217 218 220 227
    assignment_operator <node> (128)
        on left: 76 77 78 79 80 81 82 83 84 85 86
        on right: 75
    expression <node> (129)
        on left: 87 88
        on right: 4 18 73 88 246 247 248 249 250 251 252 253 254 255 258 261 263 268
    constant_expression <node> (130)
        on left: 89
        on right: 147 148 157 167 229 237
    declaration <node> (131)
        on left: 90 91 92
        on right: 243 258 259 262 263 273 276 277
    declaration_specifiers <node> (132)
        on left: 93 94 95 96 97 98 99 100 101 102
        on right: 90 91 93 95 97 99 101 194 195 196 274 275
    init_declarator_list <node> (133)
        on left: 103 104
        on right: 91 104
    init_declarator <node> (134)
        on left: 105 106
        on right: 103 104
    storage_class_specifier (135)
        on left: 107 108 109 110 111 112
        on right: 93 94
    type_specifier_list <node> (136)
        on left: 113 114
        on right: 95 96 113
    type_specifier <node> (137)
        on left: 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130
        on right: 113 114 141 142
    struct_or_union_specifier <node> (138)
        on left: 131 132 133
        on right: 128
    struct_or_union <node> (139)
        on left: 134 135
        on right: 131 132 133
    struct_declaration_list <node> (140)
        on left: 136 137
        on right: 131 132 137
    struct_declaration <node> (141)
        on left: 138 139 140
        on right: 136 137
    specifier_qualifier_list <node> (142)
        on left: 141 142 143 144
        on right: 138 139 141 143 199 200
    struct_declarator_list <node> (143)
        on left: 145 146
        on right: 139 146
    struct_declarator <node> (144)
        on left: 147 148 149
        on right: 145 146
    enum_specifier (145)
        on left: 150 151 152 153 154
        on right: 129
    enumerator_list (146)
        on left: 155 156
        on right: 150 151 152 153 156
    enumerator (147)
        on left: 157 158
        on right: 155 156
    atomic_type_specifier (148)
        on left: 159
        on right: 127
    type_qualifier (149)
        on left: 160 161 162 163
        on right: 97 98 143 144 188 189
    function_specifier (150)
        on left: 164 165
        on right: 99 100
    alignment_specifier (151)
        on left: 166 167
        on right: 101 102
    declarator <node> (152)
        on left: 168 169
        on right: 105 106 148 149 171 194 274 275
    direct_declarator <node> (153)
        on left: 170 171 172 173 174 175 176 177 178 179 180 181 182 183
        on right: 168 169 172 173 174 175 176 177 178 179 180 181 182 183
    pointer <node> (154)
        on left: 184 185 186 187
        on right: 168 184 186 201 202
    type_qualifier_list (155)
        on left: 188 189
        on right: 174 176 177 178 179 184 185 189 207 209 210 211 215 217 218 219
    parameter_type_list <node> (156)
        on left: 190 191
        on right: 181 222 224
    parameter_list <node> (157)
        on left: 192 193
        on right: 190 191 193
    parameter_declaration <node> (158)
        on left: 194 195 196
        on right: 192 193
    identifier_list (159)
        on left: 197 198
        on right: 183 198
    type_name (160)
        on left: 199 200
        on right: 15 25 26 34 35 43 159 166
    abstract_declarator (161)
        on left: 201 202 203
        on right: 195 199 204
    direct_abstract_declarator (162)
        on left: 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224
        on right: 201 203 213 214 215 216 217 218 219 220 223 224
    initializer <node> (163)
        on left: 225 226 227
        on right: 105 228
    initializer_list <node> (164)
        on left: 228
        on right: 25 26 225 226
    static_assert_declaration (165)
        on left: 229
        on right: 92 140
    statement <node> (166)
        on left: 230 231 232 233 234 235
        on right: 236 237 238 244 247 248 251 253 255 260 261 262 263
    labeled_statement <node> (167)
        on left: 236 237 238
        on right: 230
    compound_statement <node> (168)
        on left: 239 240
        on right: 231 249 250 252 254 256 257 258 259 274 275
    block_item_list <node> (169)
        on left: 241 242
        on right: 240 242
    block_item <node> (170)
        on left: 243 244
        on right: 241 242
    expression_statement <node> (171)
        on left: 245 246
        on right: 232 256 257 258 259 260 261 262 263
    selection_statement <node> (172)
        on left: 247 248 249 250 251 252
        on right: 233
    iteration_statement <node> (173)
        on left: 253 254 255 256 257 258 259 260 261 262 263
        on right: 234
    jump_statement <node> (174)
        on left: 264 265 266 267 268
        on right: 235
    program <node> (175)
        on left: 269
        on right: 0
    translation_unit <node> (176)
        on left: 270 271
        on right: 269 271
    external_declaration <node> (177)
        on left: 272 273
        on right: 270 271
    function_definition <node> (178)
        on left: 274 275
        on right: 272
    declaration_list <node> (179)
        on left: 276 277
        on right: 274 277


State 0

    0 $accept: • program $end

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    CHAR           shift, and go to state 11
    SHORT          shift, and go to state 12
    LONG           shift, and go to state 13
    SIGNED         shift, and go to state 14
    UNSIGNED       shift, and go to state 15
    VOID           shift, and go to state 16
    COMPLEX        shift, and go to state 17
    IMAGINARY      shift, and go to state 18
    ENUM           shift, and go to state 19
    ALIGNAS        shift, and go to state 20
    ATOMIC         shift, and go to state 21
    NORETURN       shift, and go to state 22
    STATIC_ASSERT  shift, and go to state 23
    THREAD_LOCAL   shift, and go to state 24
    INT            shift, and go to state 25
    FLOAT          shift, and go to state 26
    STRUCT         shift, and go to state 27
    UNION          shift, and go to state 28
    DOUBLE         shift, and go to state 29
    BOOL           shift, and go to state 30

    declaration                go to state 31
    declaration_specifiers     go to state 32
    storage_class_specifier    go to state 33
    type_specifier_list        go to state 34
    type_specifier             go to state 35
    struct_or_union_specifier  go to state 36
    struct_or_union            go to state 37
    enum_specifier             go to state 38
    atomic_type_specifier      go to state 39
    type_qualifier             go to state 40
    function_specifier         go to state 41
    alignment_specifier        go to state 42
    static_assert_declaration  go to state 43
    program                    go to state 44
    translation_unit           go to state 45
    external_declaration       go to state 46
    function_definition        go to state 47


State 1

  130 type_specifier: TYPEDEF_NAME •

    $default  reduce using rule 130 (type_specifier)


State 2

  107 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 107 (storage_class_specifier)


State 3

  108 storage_class_specifier: EXTERN •

    $default  reduce using rule 108 (storage_class_specifier)


State 4

  109 storage_class_specifier: STATIC •

    $default  reduce using rule 109 (storage_class_specifier)


State 5

  111 storage_class_specifier: AUTO •

    $default  reduce using rule 111 (storage_class_specifier)


State 6

  112 storage_class_specifier: REGISTER •

    $default  reduce using rule 112 (storage_class_specifier)


State 7

  164 function_specifier: INLINE •

    $default  reduce using rule 164 (function_specifier)


State 8

  160 type_qualifier: CONST •

    $default  reduce using rule 160 (type_qualifier)


State 9

  161 type_qualifier: RESTRICT •

    $default  reduce using rule 161 (type_qualifier)


State 10

  162 type_qualifier: VOLATILE •

    $default  reduce using rule 162 (type_qualifier)


State 11

  116 type_specifier: CHAR •

    $default  reduce using rule 116 (type_specifier)


State 12

  117 type_specifier: SHORT •

    $default  reduce using rule 117 (type_specifier)


State 13

  119 type_specifier: LONG •

    $default  reduce using rule 119 (type_specifier)


State 14

  122 type_specifier: SIGNED •

    $default  reduce using rule 122 (type_specifier)


State 15

  123 type_specifier: UNSIGNED •

    $default  reduce using rule 123 (type_specifier)


State 16

  115 type_specifier: VOID •

    $default  reduce using rule 115 (type_specifier)


State 17

  125 type_specifier: COMPLEX •

    $default  reduce using rule 125 (type_specifier)


State 18

  126 type_specifier: IMAGINARY •

    $default  reduce using rule 126 (type_specifier)


State 19

  150 enum_specifier: ENUM • '{' enumerator_list '}'
  151               | ENUM • '{' enumerator_list ',' '}'
  152               | ENUM • IDENTIFIER '{' enumerator_list '}'
  153               | ENUM • IDENTIFIER '{' enumerator_list ',' '}'
  154               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 48
    '{'         shift, and go to state 49


State 20

  166 alignment_specifier: ALIGNAS • '(' type_name ')'
  167                    | ALIGNAS • '(' constant_expression ')'

    '('  shift, and go to state 50


State 21

  159 atomic_type_specifier: ATOMIC • '(' type_name ')'
  163 type_qualifier: ATOMIC •

    '('  shift, and go to state 51

    '('       [reduce using rule 163 (type_qualifier)]
    $default  reduce using rule 163 (type_qualifier)


State 22

  165 function_specifier: NORETURN •

    $default  reduce using rule 165 (function_specifier)


State 23

  229 static_assert_declaration: STATIC_ASSERT • '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 52


State 24

  110 storage_class_specifier: THREAD_LOCAL •

    $default  reduce using rule 110 (storage_class_specifier)


State 25

  118 type_specifier: INT •

    $default  reduce using rule 118 (type_specifier)


State 26

  120 type_specifier: FLOAT •

    $default  reduce using rule 120 (type_specifier)


State 27

  134 struct_or_union: STRUCT •

    $default  reduce using rule 134 (struct_or_union)


State 28

  135 struct_or_union: UNION •

    $default  reduce using rule 135 (struct_or_union)


State 29

  121 type_specifier: DOUBLE •

    $default  reduce using rule 121 (type_specifier)


State 30

  124 type_specifier: BOOL •

    $default  reduce using rule 124 (type_specifier)


State 31

  273 external_declaration: declaration •

    $default  reduce using rule 273 (external_declaration)


State 32

   90 declaration: declaration_specifiers • ';'
   91            | declaration_specifiers • init_declarator_list ';'
  274 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  275                    | declaration_specifiers • declarator compound_statement

    IDENTIFIER  shift, and go to state 53
    '('         shift, and go to state 54
    '*'         shift, and go to state 55
    ';'         shift, and go to state 56

    init_declarator_list  go to state 57
    init_declarator       go to state 58
    declarator            go to state 59
    direct_declarator     go to state 60
    pointer               go to state 61


State 33

   93 declaration_specifiers: storage_class_specifier • declaration_specifiers
   94                       | storage_class_specifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    CHAR          shift, and go to state 11
    SHORT         shift, and go to state 12
    LONG          shift, and go to state 13
    SIGNED        shift, and go to state 14
    UNSIGNED      shift, and go to state 15
    VOID          shift, and go to state 16
    COMPLEX       shift, and go to state 17
    IMAGINARY     shift, and go to state 18
    ENUM          shift, and go to state 19
    ALIGNAS       shift, and go to state 20
    ATOMIC        shift, and go to state 21
    NORETURN      shift, and go to state 22
    THREAD_LOCAL  shift, and go to state 24
    INT           shift, and go to state 25
    FLOAT         shift, and go to state 26
    STRUCT        shift, and go to state 27
    UNION         shift, and go to state 28
    DOUBLE        shift, and go to state 29
    BOOL          shift, and go to state 30

    $default  reduce using rule 94 (declaration_specifiers)

    declaration_specifiers     go to state 62
    storage_class_specifier    go to state 33
    type_specifier_list        go to state 34
    type_specifier             go to state 35
    struct_or_union_specifier  go to state 36
    struct_or_union            go to state 37
    enum_specifier             go to state 38
    atomic_type_specifier      go to state 39
    type_qualifier             go to state 40
    function_specifier         go to state 41
    alignment_specifier        go to state 42


State 34

   95 declaration_specifiers: type_specifier_list • declaration_specifiers
   96                       | type_specifier_list •
  113 type_specifier_list: type_specifier_list • type_specifier

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    CHAR          shift, and go to state 11
    SHORT         shift, and go to state 12
    LONG          shift, and go to state 13
    SIGNED        shift, and go to state 14
    UNSIGNED      shift, and go to state 15
    VOID          shift, and go to state 16
    COMPLEX       shift, and go to state 17
    IMAGINARY     shift, and go to state 18
    ENUM          shift, and go to state 19
    ALIGNAS       shift, and go to state 20
    ATOMIC        shift, and go to state 21
    NORETURN      shift, and go to state 22
    THREAD_LOCAL  shift, and go to state 24
    INT           shift, and go to state 25
    FLOAT         shift, and go to state 26
    STRUCT        shift, and go to state 27
    UNION         shift, and go to state 28
    DOUBLE        shift, and go to state 29
    BOOL          shift, and go to state 30

    $default  reduce using rule 96 (declaration_specifiers)

    declaration_specifiers     go to state 63
    storage_class_specifier    go to state 33
    type_specifier_list        go to state 34
    type_specifier             go to state 64
    struct_or_union_specifier  go to state 36
    struct_or_union            go to state 37
    enum_specifier             go to state 38
    atomic_type_specifier      go to state 39
    type_qualifier             go to state 40
    function_specifier         go to state 41
    alignment_specifier        go to state 42


State 35

  114 type_specifier_list: type_specifier •

    $default  reduce using rule 114 (type_specifier_list)


State 36

  128 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 128 (type_specifier)


State 37

  131 struct_or_union_specifier: struct_or_union • '{' struct_declaration_list '}'
  132                          | struct_or_union • IDENTIFIER '{' struct_declaration_list '}'
  133                          | struct_or_union • IDENTIFIER

    IDENTIFIER  shift, and go to state 65
    '{'         shift, and go to state 66


State 38

  129 type_specifier: enum_specifier •

    $default  reduce using rule 129 (type_specifier)


State 39
